add enviroment variable

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <button type="button" name="button">signup</button>
 </a>
 
-    <button type="button" name="button">login</button>
+<a href="login.html">
+<button type="button" name="button">LOG IN </button>
+</a>
   </body>
 
   <script src="index.js" charset="utf-8"></script>
