--- a/signup.html
+++ b/signup.html
@@ -12,10 +12,10 @@
     <form  action="signup.html" method="post">
 
       <label> Enter your email</label>
-      <input type="text" name="emailfield" placeholder="123@gmail.com">
+      <input type="text" name="email" placeholder="123@gmail.com">
       <br><br><br>
       <label> Enter Your Password</label>
-      <input type="text" name="pinfield" placeholder="pin" >
+      <input type="text" name="pinfield" placeholder="password" >
 
    <button type="submit" name="button">SUBMIT</button>
 
