Level 3 Hashing Password

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
            <label for="email"> Email</label>
 
-           <input type="email" name= "email"  placeholder="123@gmail.com">
+           <input type="email" name= "username"  placeholder="123@gmail.com">
 
          <br><br><br>
 
